--- a/.github/workflows/cometbft-docker.yml
+++ b/.github/workflows/cometbft-docker.yml
@@ -1,10 +1,10 @@
 name: Docker
-# Build & Push rebuilds the CometBFT docker image on every push to main and creation of tags
+# Rebuilds the CometBFT docker image on every push to v0.38.x and creation of tags
 # and pushes the image to https://hub.docker.com/r/cometbft/cometbft
 on:
   push:
     branches:
-      - main
+      - v0.38.x
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+"               # Push events to matching v*, i.e. v1.0, v20.15.10
       - "v[0-9]+.[0-9]+.[0-9]+-alpha.[0-9]+"  # e.g. v0.37.0-alpha.1, v0.38.0-alpha.10
