--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,13 +1,12 @@
 name: e2e
-# Runs the CI end-to-end test network on all pushes to main or release branches
+# Runs the CI end-to-end test network on all pushes to v0.38.x
 # and every pull request, but only if any Go files have been changed.
 on:
   workflow_dispatch:  # allow running workflow manually
   pull_request:
   push:
     branches:
-      - main
-      - release/**
+      - v0.38.x
 
 jobs:
   e2e-test:
