Don't cache but do install quint
Apparently setup-node's `cache` config if only for caching deps of a
node project, which this is not.

--- a/.github/workflows/specs.yml
+++ b/.github/workflows/specs.yml
@@ -15,6 +15,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 17
-          cache: "npm"
-      # --verbosity=3 shows traces explaining test failures
-      - run: for quint_spec in **/*.qnt; do quint test --verbosity=3 $quint_spec; done
+      - name: Install quint
+        run: npm install @informalsystems/quint -g
+      - name: Test specs
+        # --verbosity=3 shows traces explaining test failures
+        run: for quint_spec in **/*.qnt; do quint test --verbosity=3 $quint_spec; done
