Revert "Repro in e2e tests"
This reverts commit 4f441f8ebac8f245d5a641c25ccdfa3b382ca063.

--- a/test/e2e/Makefile
+++ b/test/e2e/Makefile
@@ -14,7 +14,7 @@ docker:
 # order to build a binary with a CometBFT node in it (for built-in
 # ABCI testing).
 node:
-	go build -race $(BUILD_FLAGS) -tags '$(BUILD_TAGS)' -o build/node ./node
+	go build $(BUILD_FLAGS) -tags '$(BUILD_TAGS)' -o build/node ./node
 
 generator:
 	go build -o build/generator ./generator
