--- a/.github/workflows/govulncheck.yml
+++ b/.github/workflows/govulncheck.yml
@@ -17,7 +17,8 @@ jobs:
     steps:
       - uses: actions/setup-go@v4
         with:
-          go-version: "1.20.3"
+          go-version: "1.20"
+          check-latest: true
       - uses: actions/checkout@v3
       - uses: technote-space/get-diff-action@v6
         with:
