--- a/.github/workflows/e2e-long-main.yml
+++ b/.github/workflows/e2e-long-main.yml
@@ -7,8 +7,8 @@
 name: e2e-long-main
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 3 * * 4'
+  #schedule:
+  #  - cron: '0 3 * * 4'
 
 jobs:
   e2e-long-test:
