--- a/.golangci.yml
+++ b/.golangci.yml
@@ -31,6 +31,11 @@ issues:
     - path: _test\.go
       linters:
         - gosec
+    - path: \.pb\.go
+      linters:
+        - gofmt
+        - goimports
+        - govet
   max-same-issues: 50
 
 linters-settings:
